--- a/style.css
+++ b/style.css
@@ -18,6 +18,22 @@ html {
     transition: transform 0.3s;
 }
 
+
+.neon-toggle {
+    position: fixed;
+    top: 10px;
+    right: 40px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 24px;
+    color: inherit;
+}
+
+.neon-toggle i {
+    transition: transform 0.3s;
+}
+
 .bd-placeholder-img {
     font-size: 1.125rem;
     text-anchor: middle;
